# skepu

./: CMakeLists.txt
CMake/: BuildFPGAKernelHelper.cmake  SkePUHelpers.cmake
src/skepu-tool/: CMakeLists.txt  code_gen.cpp  code_gen.h  code_gen_cl.cpp  code_gen_fpga.cpp  code_gen_fpga.h  data_structures.h  globals.h  map_cl.cpp  map_fpga.cpp  mapoverlap_cl.cpp  mapoverlap_fpga.cpp  mappairs_cl.cpp  mappairsreduce_cl.cpp  mapreduce_cl.cpp  mapreduce_fpga.cpp  reduce_cl.cpp  reduce_fpga.cpp  scan_cl.cpp  scan_fpga.cpp  skepu.cpp
